--- a/giftideas.csproj
+++ b/giftideas.csproj
@@ -9,6 +9,8 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.1" PrivateAssets="All"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1"/>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="1.1.0"/>
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="1.1.0"/>
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1"/>
